fixed view email error message text overflow

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -132,8 +132,7 @@ input {
 }
 
 #revealEmail {
-    top: 16px;
-    right: 30px;
+    top: 5px;
 }
 
 .Error {
